fixing flattr and plus one buttons spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1753,10 +1753,7 @@ h2.subTitle {
     margin-top: 10px;
     margin-bottom: 10px;
     margin-right: 44px;
-}
-
-#___plusone_0 {
-    margin-top: 10px;
+    height: 30px;
 }
 
 .FlattrButton {
